Redesign the app and add flex sensors service
Redesign the app UI layouts using the guidlines of the Introduction to Android MOOC by Google as a learning experience
Add a flex sensors service with its own layout and source implementation
Change the name of the main layout to a more suggestive filename
Define all string literals to an XML resource in values/strings.xml and reference them from there in source to conform to standards
Define colors in the resource values/colors.xml
Request to enable location settings programmatically to solve the problem of user not knowing it's needed
Request for location permissions programmatically to solve the problem of user not knowing they are required
Use an icon in action bar menuitem instead of text
Update the manifest to inlude all required permissions
Remove all typing errors(typos) in the XML resource files and the java code and rename variables to eliminate warnings
Delete unused image resource files
Add NXP logo and flex sensors image resource files

--- a/BLEToolBox/app/src/main/res/values/strings.xml
+++ b/BLEToolBox/app/src/main/res/values/strings.xml
@@ -1,5 +1,46 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- General app Strings -->
     <string name="app_name">BLE Toolbox</string>
     <string name="ble_not_supported">BLE is not supported on this device</string>
     <string name="ble_supported">BLE is supported on this device</string>
+
+    <!-- Menu items strings -->
+    <string name="scan">SCAN</string>
+    <string name="stop">STOP</string>
+    <string name="connect">CONNECT</string>
+    <string name="disconnect">DISCONNECT</string>
+
+    <!-- UUID Strings-->
+    <string name="uuid_mask" tools:ignore="TypographyDashes">0000FFFF-0000-0000-0000-000000000000</string>
+
+    <!-- MainActivity Layout strings -->
+    <string name="flex_sensors">Flex Sensors Icon</string>
+    <string name="blood_pressure">Blood Pressure Icon</string>
+    <string name="heat_rate">Heart Rate Icon</string>
+    <string name="flex_sensors_txt">Flex Sensors</string>
+    <string name="blood_pressure_txt">Blood Pressure</string>
+    <string name="heat_rate_txt">Heart Rate</string>
+    <string name="author">© Karibe Consulting</string>
+
+    <!-- Flex sensors layout strings-->
+    <string name="empty">--</string>
+    <string name="thumb">The Thumb</string>
+    <string name="index">Index Finger</string>
+    <string name="middle">Middle Finger</string>
+    <string name="ring">Ring Finger</string>
+    <string name="small">Small Finger</string>
+    <string name="battery_level">Battery Level</string>
+
+    <!-- Blood Pressure layout strings -->
+    <string name="emptyBloodPressure">-- Bmp</string>
+    <string name="dateTime">Date &amp; Time</string>
+    <string name="meanAP">Mean AP</string>
+    <string name="systolic">Systolic</string>
+    <string name="diastolic">Diastolic</string>
+    <!-- MAC ADDRESS to scan for flex sensors service -->
+    <string name="macAddress">00:60:37:23:4F:3A</string>
+
+    <!-- Image descriptions -->
+    <string name="nxp_logo">NXP Logo</string>
+    <string name="info_logo">Information button</string>
 </resources>
